# bioduck

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
bioduck/: main.py
src/bioduck/: __init__.py  main.py
src/bioduck/sql/: __init__.py
src/bioduck/sql/ncbi/: __init__.py  init.sql  load_assembly_genbank.sql  load_assembly_refseq.sql  load_taxonomy.sql
