[project]
name = "bioduck"
version = "0.1.0"
description = "A CLI tool for running SQL files against DuckDB and exploring data interactively"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.2.1",
]

[project.scripts]
bioduck = "bioduck.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bioduck" = ["sql/**/*.sql"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__", "*.pyo"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
